# honglt-myproject

./: ProjectHome.md
CallCenter/: CallCenter.opt  Xuser32.exp  g711codc.ax  mssccprj.scc  vssver.scc  xProfile.xml  协议.txt
CallCenter/Common/: IPacket.inl  PacketBase.cpp  PacketBase.h  PacketCore.cpp  PacketCore.h  Pipeline.h  buffer.cpp  buffer.h  ipacket.h  md5.h  vssver.scc
CallCenter/Data/: 2008年01月.xml
CallCenter/H263Codec/: H263Codec.dsp  mssccprj.scc  vssver.scc
CallCenter/XLiveUpdate/: LiveUpdate.cpp  StdAfx.cpp  VersionChecker.cpp  XLiveUpdate.dsp  XLiveUpdate.plg  mssccprj.scc  resource.h  transfer.cpp  wizardcheckerpage.h  wizardfailedpage.cpp  wizardfinishedpage.h  wizardnothingpage.cpp  wizardnothingpage.h  wizardsheet.h  wizardwelcomepage.cpp
CallCenter/Xcenter/: Channel.cpp  Channel.h  ChannelClerk.cpp  ChannelClerk.h  ChannelDialer.cpp  ChannelDialer.h  ChannelFax.h  ChannelInter.cpp  ChannelUser.cpp  ChannelUser.h  ChannelUser2.h  ChannelVip.h  ChannelXeno.cpp  Circuitry.cpp  CoolInterface.cpp  CoolInterface.h  CoolMenu.cpp  CtrlIconButton.cpp  CtrlIconCombo.h  CtrlMailPanel.cpp  CtrlMailPanel.h  CtrlMusicPanel.h  CtrlNetworkChild.cpp  CtrlNetworkTree.cpp  CtrlNetworkTree.h  CtrlTaskPanel.cpp  CtrlTaskPanel.h  CtrlTelecomPanel.cpp  CtrlUserList.cpp  CtrlUserPanel.cpp  CtrlUserPanel.h  DlgAbout.cpp  DlgExecute.cpp  DlgExecute.h  DlgPresserManager.cpp  DlgPresserManager.h  DlgProfilesManager.cpp  DlgProfilesManager.h  DlgSettingsManager.cpp  DlgSplash.cpp  (+56 more)
CallCenter/Xphone/: CaptureGraph.cpp  ChannelCaller.cpp  ChannelCaller.h  CtrlCoolHeaderBar.cpp  FilterRtpSender.h  RTPSession2.cpp  Xphone.dsp  Xphone.rc  channel.h  coolmenu.cpp  ctrlcoolbar.cpp  dlgconnect.cpp  dlgsplash.cpp  network.cpp  network.h  registry.cpp  registry.h  resource.h  skin.cpp  stdafx.h  vssver.scc  windowmanager.cpp  wndchild.cpp  wndmain.cpp  wndmain.h  xphone.cpp  xphone.h
CallCenter/Xuser32/: AudioRender.cpp  CookieAdmin.xml  CtrlIconCombo.cpp  CtrlIconCombo.h  CtrlNetworkPanel.cpp  DlgAbout.cpp  DlgConnect.cpp  DlgConnect.h  DlgJoinVisitor.cpp  DlgJoinVisitor.h  EncodeBody-SyncHostLink.xml  FilterRtpReceiver.h  LoadPacket-SyncDataView.xml  PageSettingsAudio.cpp  PageSettingsAudio.h  PageSettingsVideo.cpp  RTPSession2.cpp  Traffic.cpp  VideoCapture.h  XopenLiner.ilk  Xuser32.lib  Xuser32.ncb  Xuser32.plg  Xuser32.rc  Xuser32Debug.exp  Xuser32Debug.ilk  Xuser32Debug.lib  channel.cpp  channeluser.cpp  channeluser.h  coolinterface.cpp  ctrlcoolbar.cpp  ctrlcoolbar.h  dlgsettingsmanager.h  dlgsplash.cpp  imagefile.cpp  msado15.tli  settings.cpp  settings.h  skin.h  (+6 more)
CallCenter/g729Codec/: FilterG729Decoder.h  FilterG729Encoder.cpp  mssccprj.scc
CallCenter/xgateway/: AudioRenderer.cpp  ChannelUser.h  Circuitry.h  CtrlNetworkTreeBar.h  CtrlNetworkVideo.cpp  DlgProfileManager.cpp  DlgProfileManager.h  (+36 more)
DataCenter/: DataCenter.sln  MakeReport.aps  MakeReport.ilk  MakeReport.plg  PageProfileUnicom.cpp  PageSettingsTelecom.h  Settings.cpp  WndTelecom.cpp  WndUnicom.cpp  buffer.cpp  mssccprj.scc  pagesettingsgeneral.cpp  pagesettingsgeneral.h  registry.cpp  vssver.scc  wndmain.h  wndsettingspage.cpp
Include/: CString.h  Sysdefs.h
Lib/: boost_python-vc80-mt-gd.lib  ssleay32.lib
NetServer/: ProactorNetHandler.cpp  ProactorNetHandler.h  ProactorNetServer.h  SessionManager.cpp
Platform/: Platform.cmake
Platform/ComService/: Buffer.cpp  CMakeLists.txt  CString.cpp  ComService.cpp  Encrypt.cpp  ServiceThread.cpp  WinFileInfo.cpp
trunk/NetServer/: CMakeLists.txt
trunk/Platform/ComService/: CMakeLists.txt  CString.cpp  ComService.rc  ComService.vcproj  Encrypt.cpp  Randomize.cpp  Resource.h  StdAfx.h  XML.cpp
trunk/Platform/UnitTest/: CMakeLists.txt  TestCase.cpp
(+1478 files in other folders)
